Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 <h2>
 <a id="angularjs" class="anchor" href="#angularjs" aria-hidden="true"><span class="octicon octicon-link"></span></a>AngularJS</h2>
 
-<ul>
+<ol>
 <li>
 <p><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Get-Started-with-Angular.js">Waypoint: Get Started with Angular.js</a></p>
 
@@ -421,16 +421,37 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Apply-Angularjs-Directives#filters">Filters</a></li>
 </ul>
 </li>
-<li><p><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Power-Forms-with-Angularjs">Waypoint: Power Forms with Angular.js</a></p></li>
+<li>
+<p><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Power-Forms-with-Angularjs">Waypoint: Power Forms with Angular.js</a></p>
+
+<ul>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Customize-Angularjs-Directives">Waypoint: Customize Angular.js Directives</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Create-Angularjs-Services">Waypoint: Create Angular.js Services</a></li>
 </ul>
+</li>
+</ol>
 
 <h2>
 <a id="git" class="anchor" href="#git" aria-hidden="true"><span class="octicon octicon-link"></span></a>Git</h2>
 
 <ol>
-<li>Waypoint: Save your Code Revisions Forever with Git</li>
+<li>
+<a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Save-your-Code-Revisions-Forever-with-Git">Waypoint: Save your Code Revisions Forever with Git</a>
+
+<ul>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Save-your-Code-Revisions-Forever-with-Git#install-and-configure-git">Install and configure Git</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Save-your-Code-Revisions-Forever-with-Git#create-a-local-repository">Create a local repository</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Save-your-Code-Revisions-Forever-with-Git#check-status-add-and-commit-changes">Check status, add and commit changes</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Save-your-Code-Revisions-Forever-with-Git#get-a-github-account">Get a GitHub account</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Save-your-Code-Revisions-Forever-with-Git#connect-local-repositories-to-remote-ones-on-githubcom">Connect local repositories to remote ones on GitHub.com</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Save-your-Code-Revisions-Forever-with-Git#fork-and-clone-an-open-source-repository">Fork and clone an open source repository</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Save-your-Code-Revisions-Forever-with-Git#create-a-branch-for-featureschanges">Create a branch for features/changes</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Save-your-Code-Revisions-Forever-with-Git#add-and-sync-with-a-collaborator">Add and sync with a collaborator (Hi, @reporobot!)</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Save-your-Code-Revisions-Forever-with-Git#push-and-pull-to-sync-changes-to-githubcom">Push and pull to sync changes to GitHub.com</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Save-your-Code-Revisions-Forever-with-Git#create-a-pull-request">Create a pull request</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Save-your-Code-Revisions-Forever-with-Git#merge-and-delete-branches">Merge and delete branches</a></li>
+</ul>
+</li>
 </ol>
 
 <h2>
