--- a/index.html
+++ b/index.html
@@ -1,42 +1,33 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>My-freecodecamp-code by Rafase282</title>
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <title>My-freecodecamp-code</title>
-  <meta name="description" content="My code from the bootcamp.">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">My-freecodecamp-code</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">My code from the bootcamp.</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code" class="code">View My-freecodecamp-code on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h1>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>My-freecodecamp-code</h1>
+        <p>My code from the bootcamp.</p>
+        <p class="view"><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code">View the Project on GitHub <small>Rafase282/My-FreeCodeCamp-Code</small></a></p>
+        <ul>
+          <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>
 <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome!</h1>
 
 <p>This repository is not for an app but more as a journal where I keep a record of everything I have done and learned from FreeCodeCamp. I decided to use a wiki as I can put more information easily on it. You will find my code there and also on the right directories if you just want to see the code.</p>
@@ -266,6 +257,7 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Declare-JavaScript-Objects-as-Variables">Waypoint: Declare JavaScript Objects as Variables</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Construct-JavaScript-Objects-with-Functions">Waypoint: Construct JavaScript Objects with Functions</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Make-Object-Properties-Private">Waypoint: Make Object Properties Private</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Make-Unique-Objects-by-Passing-Parameters-to-our-Constructor">Waypoint: Make Unique Objects by Passing Parameters to our Constructor</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Make-Instances-of-Objects-with-a-Constructor-Function">Waypoint: Make Instances of Objects with a Constructor Function</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Iterate-over-Arrays-with-map">Waypoint: Iterate over Arrays with .map</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Condense-arrays-with-reduce">Waypoint: Condense arrays with .reduce</a></li>
@@ -490,27 +482,14 @@
 <ol>
 <li>Waypoint: Claim Your Full Stack Development Certificate</li>
 </ol>
-        </article>
-      </div>
+      </section>
     </div>
     <footer>
-      <div class="owner">
-      <p><a href="https://github.com/Rafase282" class="avatar"><img src="https://avatars0.githubusercontent.com/u/285138?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/Rafase282">Rafase282</a> maintains <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code">My-freecodecamp-code</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
+      <p>Project maintained by <a href="https://github.com/Rafase282">Rafase282</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="tar">tar</a><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-            <script type="text/javascript">
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -521,5 +500,5 @@
             } catch(err) {}
           </script>
 
-</body>
+  </body>
 </html>
