--- a/Intermediate Front End Development Projects/Simon/index.html
+++ b/Intermediate Front End Development Projects/Simon/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="start">
               <div class="start-button"></div>
-              <span class="label">START</span>
+              <span id="start" class="label">START</span>
             </div>
             <div class="strict">
               <div class="strict-button"></div>
