--- a/Intermediate Front End Development Projects/Simon/index.html
+++ b/Intermediate Front End Development Projects/Simon/index.html
@@ -14,6 +14,19 @@
 <body>
 
   <section>
+    <div class="win hidden">YOU WIN!
+      <div class="modal-buttons">
+        <span class="play-again">PLAY AGAIN</span>
+        <span class="quit">QUIT</span>
+      </div>
+    </div>
+    <div class="lose hidden">OH NO!
+      <div class="modal-buttons">
+        <span class="play-again">PLAY AGAIN</span>
+        <span class="quit">QUIT</span>
+      </div>
+    </div>
+    <!-- the game -->
     <div class="app-container">
       <div data-tile="4" class="tiles green"> </div>
       <div data-tile="1" class="tiles red"> </div>
@@ -27,7 +40,7 @@
           </div>
           <div class="middle-row">
             <div class="display">
-              <div class="round-number">0</div>
+              <div class="round-number"></div>
               <span class="label">ROUND</span>
             </div>
             <div class="start">
@@ -51,21 +64,11 @@
     </div>
   </section>
   <footer>
-    <p>Copyright © Rafael J. Rodriguez 2015. All Rights Reserved</p>
-    <p>
-      <a href="mailto:rafase282@gmail.com">
-        <i class="fa fa-envelope fa-fw"></i></a>
-      <a href="https://github.com/Rafase282" target="_blank">
-        <i class="fa fa-github fa-fw"></i></a>
-      <a href="https://www.linkedin.com/in/rafase282" target="_blank">
-        <i class="fa fa-linkedin"></i></a>
-      <a href="http://codepen.io/Rafase282" target="_blank">
-        <i class="fa fa-codepen"></i></a>
-      <a href="https://rafase282.wordpress.com" target="_blank">
-        <i class="fa fa-wordpress"></i></a>
-      <a href="https://rafase282.wordpress.com" target="_blank">
-        (<i class="fa fa-fire fa-fw">)</i></a>
-    </p>
+    <p>Copyright © Rafael J. Rodriguez & <a href="mailto: guy@guylemon.com">Guy Lemon</a> 2015. All Rights Reserved</p>
+    <p> <a href="mailto:rafase282@gmail.com"><i class="fa fa-envelope fa-fw"></i></a><a href="https://github.com/Rafase282" target="_blank"><i class="fa fa-github fa-fw"></i></a>
+      <a href="https://www.linkedin.com/in/rafase282" target="_blank"> <i class="fa fa-linkedin"></i></a>
+      <a href="http://codepen.io/Rafase282" target="_blank"> <i class="fa fa-codepen"></i></a>
+      <a href="https://rafase282.wordpress.com" target="_blank"> <i class="fa fa-wordpress"></i></a><a href="https://rafase282.wordpress.com" target="_blank"> (<i class="fa fa-fire fa-fw">)</i></a></p>
   </footer>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
