Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Get-JSON-with-the-jQuery-getJSON-Method">Waypoint: Get JSON with the jQuery getJSON Method</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Convert-JSON-Data-to-HTML">Waypoint: Convert JSON Data to HTM</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Render-Images-from-Data-Sources">Waypoint: Render Images from Data Sources</a></li>
-<li>Waypoint: Prefilter JSON</li>
-<li>Waypoint: Get Geo-location Data</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Prefilter-JSON">Waypoint: Prefilter JSON</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Get-Geo-location-Data">Waypoint: Get Geo-location Data</a></li>
 </ol>
 
 <h2>
@@ -352,7 +352,7 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Stylize-Stories-on-Camper-News">Zipline: Stylize Stories on Camper News</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Wikipedia-Viewer">Zipline: Wikipedia Viewer</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Tic-Tac-Toe-Game">Zipline: Build a Tic Tac Toe Game</a></li>
-<li>Zipline: Build a Simon Game</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Simon-Game">Zipline: Build a Simon Game</a></li>
 </ol>
 
 <h2>
