--- a/Basic Front End Development Projects/Portfolio/index.html
+++ b/Basic Front End Development Projects/Portfolio/index.html
@@ -85,9 +85,9 @@
             </div>
             <div id="collapse2" class="panel-collapse collapse">
               <div class="panel-body">November 2014 – Present (10 months)
-                <h5>Job Responsibilities
-                  <h5>
-                    I provide Help-desk and other on demand solutions to the NYC public schools. Currently I have worked on M.S. 219, setting up a computer lab for the school, upgrading and setting up iPads and other Help-desk related tasks.
+                <h5>Job Responsibilities</h5>
+
+                I provide Help-desk and other on demand solutions to the NYC public schools. Currently I have worked on M.S. 219, setting up a computer lab for the school, upgrading and setting up iPads and other Help-desk related tasks.
               </div>
             </div>
           </div>
@@ -221,13 +221,13 @@
         <div class="col-md-3">
           <div class="well">
             <a href="http://codepen.io/Rafase282/full/ZbGRzG/" class="thumbnail" target='_blank'>
-              <img src="http://i.imgur.com/Oy0Wcj4.pngg" alt="Project 4">
-              <h2 class="gray-text">Twitchtv JSON API</h2>
+              <img src="http://i.imgur.com/z760EWA.png" alt="Simon">
+              <h2 class="gray-text">Simon Game</h2>
             </a>
-            <p class="gray-text">This app will use the Twitch TV JSON API and display a list of accounts, if they are closed it will display the right symbols and mention that the account has been closed, the same for offline and online streams. It will also display online
-              and offline streams on a different tab and has a global search function that display results as you type while hiding anything that is not part of the match using regular expressions.</p>
+            <p class="gray-text">Web App that lets the use plays against the machine. There are two modes, strict mode which does not allow for reties, and normal mode which allows for unlimited retries.
+              <br/>The speed increases after the 5th,9th and 13th round. The player wins after the 20th round.</p>
             <p class="gray-text">
-              <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2.</p>
+              <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2, Jade, SASS.</p>
           </div>
         </div>
       </div>
