Virtually it is done
Still have to work some details

--- a/Intermediate Front End Development Projects/Weather/index.html
+++ b/Intermediate Front End Development Projects/Weather/index.html
@@ -17,7 +17,7 @@
     <h1>FreeCodeCamp</h1>
     <h2>Local Weather</h2>
     <div class="well">
-      <p id="weather">Weather Goes Here</p>
+      <p id="weather"></p>
       <form action="/select-metric">
         <label>
           <input type="radio" checked name="farenheit-celcius" id="f"> Farenheit</label>
