Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -450,7 +450,18 @@
 <a id="nodejs-and-expressjs" class="anchor" href="#nodejs-and-expressjs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Node.js and Express.js</h2>
 
 <ol>
-<li>Waypoint: Manage Packages with NPM</li>
+<li>
+<a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM">Waypoint: Manage Packages with NPM</a>
+
+<ul>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM#install-npm">Install NPM</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM#setup-development-envirioment">Setup Dev Envirioment</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM#start-a-project">Start A project</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM#install-a-module">Install a Module</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM#listing-dependencies">Listing Dependencies</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM#npm-test">NPM Test</a></li>
+</ul>
+</li>
 <li>Waypoint: Start a Node.js Server</li>
 <li>Waypoint: Continue working with Node.js Servers</li>
 <li>Waypoint: Finish working with Node.js Servers</li>
