Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 
 <ol>
 <li>
-<a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM">Waypoint: Manage Packages with NPM</a>
+<p><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM">Waypoint: Manage Packages with NPM</a></p>
 
 <ul>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM#install-npm">Install NPM</a></li>
@@ -460,9 +460,12 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM#install-a-module">Install a Module</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM#listing-dependencies">Listing Dependencies</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM#npm-test">NPM Test</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM#package-niceties">Package Niceties</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM#publish">Publish</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM#version">Version</a></li>
 </ul>
 </li>
-<li>Waypoint: Start a Node.js Server</li>
+<li><p>Waypoint: Start a Node.js Server</p></li>
 <li>Waypoint: Continue working with Node.js Servers</li>
 <li>Waypoint: Finish working with Node.js Servers</li>
 <li>Waypoint: Build Web Apps with Express.js</li>
