Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -465,9 +465,36 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manage-Packages-with-NPM#version">Version</a></li>
 </ul>
 </li>
-<li><p>Waypoint: Start a Node.js Server</p></li>
-<li>Waypoint: Continue working with Node.js Servers</li>
-<li>Waypoint: Finish working with Node.js Servers</li>
+<li>
+<p><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Start-a-Nodejs-Server">Waypoint: Start a Node.js Server</a></p>
+
+<ul>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Start-a-Nodejs-Server#baby-steps">Baby Steps</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Start-a-Nodejs-Server#my-first-io">My First I/O</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Start-a-Nodejs-Server#my-first-async-io">My First ASYNC I/O</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Start-a-Nodejs-Server#filtered-ls">Filtered LS</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Start-a-Nodejs-Server#make-it-modular">Make it Modular</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Start-a-Nodejs-Server#http-client">HTTP Client</a></li>
+</ul>
+</li>
+<li>
+<a href="">Waypoint: Continue working with Node.js Servers</a>
+
+<ul>
+<li><a href="">HTTP Collect</a></li>
+<li><a href="">Juggling Async</a></li>
+<li><a href="">Time Server</a></li>
+</ul>
+</li>
+<li>
+<a href="">Waypoint: Finish working with Node.js Servers</a>
+
+<ul>
+<li><a href="">HTTP File Server</a></li>
+<li><a href="">HTTP Uppercaserer</a></li>
+<li><a href="">HTTP JSON API Server</a></li>
+</ul>
+</li>
 <li>Waypoint: Build Web Apps with Express.js</li>
 </ol>
 
