Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#remove-classes-from-an-element-with-jquery">Waypoint: Remove Classes from an element with jQuery</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#change-the-css-of-an-element-using-jquery">Waypoint: Change the CSS of an Element Using jQuery</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#disable-an-element-using-jquery">Waypoint: Disable an Element Using jQuery</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Change-Text-Inside-an-Element-Using-jQuery">Waypoint: Change Text Inside an Element Using jQuery</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#remove-an-element-using-jquery">Waypoint: Remove an Element Using jQuery</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#use-appendto-to-move-elements-with-jquery">Waypoint: Use appendTo to Move Elements with jQuery</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#clone-an-element-using-jquery">Waypoint: Clone an Element Using jQuery</a></li>
@@ -478,12 +479,12 @@
 </ul>
 </li>
 <li>
-<a href="">Waypoint: Continue working with Node.js Servers</a>
+<a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Continue-working-with-Node.js-Servers">Waypoint: Continue working with Node.js Servers</a>
 
 <ul>
-<li><a href="">HTTP Collect</a></li>
-<li><a href="">Juggling Async</a></li>
-<li><a href="">Time Server</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Continue-working-with-Node.js-Servers#http-collect">HTTP Collect</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Continue-working-with-Node.js-Servers#juggling-async">Juggling Async</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Continue-working-with-Node.js-Servers#time-server">Time Server</a></li>
 </ul>
 </li>
 <li>
