Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 <a id="claim-your-front-end-development-certificate" class="anchor" href="#claim-your-front-end-development-certificate" aria-hidden="true"><span class="octicon octicon-link"></span></a>Claim Your Front End Development Certificate</h2>
 
 <ol>
-<li><a href="http://freecodecamp.com/challenges/waypoint-claim-your-front-end-development-certificate">Waypoint: Claim Your Front End Development Certificate</a></li>
+<li><a href="http://www.freecodecamp.com/rafase282/front-end-certification">Waypoint: Claim Your Front End Development Certificate</a></li>
 </ol>
 
 <h2>
@@ -497,14 +497,41 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Finish-working-with-Nodejs-Servers#http-json-api-server">HTTP JSON API Server</a></li>
 </ul>
 </li>
-<li>Waypoint: Build Web Apps with Express.js</li>
+<li>
+<a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Build-Web-Apps-with-Express.js">Waypoint: Build Web Apps with Express.js</a>
+
+<ul>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Build-Web-Apps-with-Express.js#hello-world">Hello World!</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Build-Web-Apps-with-Express.js#static">Static</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Build-Web-Apps-with-Express.js#jade">Jade</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Build-Web-Apps-with-Express.js#good-old-form">Good Old Form</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Build-Web-Apps-with-Express.js#stylish-css">Stylish CSS</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Build-Web-Apps-with-Express.js#param-pam-pam">Param Pam Pam</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Build-Web-Apps-with-Express.js#whats-in-query">What's In Query</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Build-Web-Apps-with-Express.js#json-me">JSON Me</a></li>
+</ul>
+</li>
 </ol>
 
 <h2>
 <a id="mongodb" class="anchor" href="#mongodb" aria-hidden="true"><span class="octicon octicon-link"></span></a>MongoDB</h2>
 
 <ol>
-<li>Waypoint: Store Data in MongoDB</li>
+<li>
+<a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Store-Data-in-MongoDB">Waypoint: Store Data in MongoDB</a>
+
+<ul>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Store-Data-in-MongoDB#mongod">Mongod</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Store-Data-in-MongoDB#connect">Connect</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Store-Data-in-MongoDB#find">Find</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Store-Data-in-MongoDB#find-project">Find Project</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Store-Data-in-MongoDB#insert">Insert</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Store-Data-in-MongoDB#update">Update</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Store-Data-in-MongoDB#remove">Remove</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Store-Data-in-MongoDB#count">Count</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Store-Data-in-MongoDB#aggregate">Aggregate</a></li>
+</ul>
+</li>
 </ol>
 
 <h2>
