Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 <a id="claim-your-front-end-development-certificate" class="anchor" href="#claim-your-front-end-development-certificate" aria-hidden="true"><span class="octicon octicon-link"></span></a>Claim Your Front End Development Certificate</h2>
 
 <ol>
-<li><a href="http://www.freecodecamp.com/rafase282/front-end-certification">Waypoint: Claim Your Front End Development Certificate</a></li>
+<li><a href="http://www.freecodecamp.com/rafase282/front-end-certification">My Front End Development Certificate</a></li>
 </ol>
 
 <h2>
@@ -550,7 +550,7 @@
 <a id="claim-your-full-stack-development-certificate" class="anchor" href="#claim-your-full-stack-development-certificate" aria-hidden="true"><span class="octicon octicon-link"></span></a>Claim Your Full Stack Development Certificate</h2>
 
 <ol>
-<li>Waypoint: Claim Your Full Stack Development Certificate</li>
+<li>My Full Stack Development Certificate</li>
 </ol>
         </section>
 
