Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -538,8 +538,14 @@
 <a id="full-stack-javascript-projects" class="anchor" href="#full-stack-javascript-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Full Stack JavaScript Projects</h2>
 
 <ol>
-<li>Waypoint: Get Set for Basejumps</li>
-<li>Basejump: Build a Voting App</li>
+<li>
+<a href="http://www.freecodecamp.com/challenges/waypoint-get-set-for-basejumps">Waypoint: Get Set for Basejumps</a>
+
+<ul>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/MERN-on-Ubuntu">Ubuntu Setup</a></li>
+</ul>
+</li>
+<li><a href="">Basejump: Build a Voting App</a></li>
 <li>Basejump: Build a Nightlife Coordination App</li>
 <li>Basejump: Chart the Stock Market</li>
 <li>Basejump: Manage a Book Trading Club</li>
