Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Create-Decimal-Numbers-with-JavaScript">Waypoint: Create Decimal Numbers with JavaScript</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Multiply-Two-Decimals-with-JavaScript">Waypoint: Multiply Two Decimals with JavaScript</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Divide-One-Decimal-by-Another-with-JavaScript">Waypoint: Divide one Decimal by Another with JavaScript</a></li>
-<li>Waypoint: Finding a Remainder in Javascript</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Finding-a-Remainder-in-Javascript">Waypoint: Finding a Remainder in Javascript</a></li>
 <li>Waypoint: Assignment with Plus Equals</li>
 <li>Waypoint: Assignment with Minus Equals</li>
 <li>Waypoint: Assignment with Times Equals</li>
 <li>Waypoint: Assignment with Divided by Equals</li>
-<li>Bonfire: Convert Celsius to Fahrenheit</li>
+<li>Checkpoint: Convert Celsius to Fahrenheit</li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#declare-string-variables">Waypoint: Declare String Variables</a></li>
 <li>Waypoint: Escaping Literal Quotes in Strings</li>
 <li>Waypoint: Quoting Strings with Single Quotes</li>
@@ -261,7 +261,7 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Use-Bracket-Notation-to-Find-the-Nth-Character-in-a-String">Waypoint: Use Bracket Notation to Find the Nth Character in a String</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Use-Bracket-Notation-to-Find-the-Last-Character-in-a-String">Waypoint: Use Bracket Notation to Find the Last Character in a String</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Use-Bracket-Notation-to-Find-the-Nth-to-Last-Character-in-a-String">Waypoint: Use Bracket Notation to Find the Nth-to-Last Character in a String</a></li>
-<li>Bonfire: Word Blanks</li>
+<li>Checkpoint: Word Blanks</li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Store-Multiple-Values-in-one-Variable-using-JavaScript-Arrays">Waypoint: Store Multiple Values in one Variable using JavaScript Arrays</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Nest-one-Array-within-Another-Array">Waypoint: Nest one Array within Another Array</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Access-Array-Data-with-Indexes">Waypoint: Access Array Data with Indexes</a></li>
@@ -271,7 +271,7 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manipulate-Arrays-With-pop()">Waypoint: Manipulate Arrays With pop()</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manipulate-Arrays-With-shift()">Waypoint: Manipulate Arrays With shift()</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manipulate-Arrays-With-unshift()">Waypoint: Manipulate Arrays With unshift()</a></li>
-<li>Bonfire: Shopping List</li>
+<li>Checkpoint: Shopping List</li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Write-Reusable-JavaScript-with-Functions">Waypoint: Write Reusable JavaScript with Functions</a></li>
 <li>Waypoint: Passing Values to Functions with Arguments</li>
 <li>Waypoint: Global Scope and Functions Incomplete</li>
@@ -279,7 +279,7 @@
 <li>Waypoint: Global vs. Local Scope in Functions</li>
 <li>Waypoint: Return a Value from a Function with Return</li>
 <li>Waypoint: Assignment with a Returned Value</li>
-<li>Bonfire: Stand in Line</li>
+<li>Checkpoint: Stand in Line</li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Use-Conditional-Logic-with-If-Statements">Waypoint: Use Conditional Logic with If Statements</a></li>
 <li>Waypoint: Comparison with the Equality Operator</li>
 <li>Waypoint: Comparison with the Strict Equality Operator</li>
@@ -294,32 +294,32 @@
 <li>Waypoint: Introducing Else Statements</li>
 <li>Waypoint: Introducing Else If Statements</li>
 <li>Waypoint: Chaining If Else Statements</li>
-<li>Bonfire: Golf Code</li>
-<li>Waypoint: Selecting from many options with Switch Statements</li>
-<li>Waypoint: Adding a default option in Switch statements</li>
-<li>Waypoint: Multiple Identical Options in Switch Statements</li>
-<li>Waypoint: Replacing If Else Chains with Switch</li>
-<li>Waypoint: Returning Boolean Values from Functions</li>
-<li>Waypoint: Return Early Pattern for Functions</li>
-<li>Bonfire: Counting Cards</li>
+<li>Checkpoint: Golf Code</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Selecting-From-Many-Options-With-Switch-Statements">Waypoint: Selecting from many options with Switch Statements</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Adding-A-Default-Option-In-Switch-Statements">Waypoint: Adding a default option in Switch statements</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Multiple-Identical-Options-In-Switch-Statements">Waypoint: Multiple Identical Options in Switch Statements</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Replacing-If-Else-Chains-With-Switch">Waypoint: Replacing If Else Chains with Switch</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Returning-Boolean-Values-From-Functions">Waypoint: Returning Boolean Values from Functions</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Return-Early-Pattern-For-Functions">Waypoint: Return Early Pattern for Functions</a></li>
+<li>Checkpoint: Counting Cards</li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Build-JavaScript-Objects">Waypoint: Build JavaScript Objects</a></li>
-<li>Waypoint: Accessing Objects Properties with the Dot Operator</li>
-<li>Waypoint: Accessing Objects Properties with Bracket Notation</li>
-<li>Waypoint: Accessing Objects Properties with Variables</li>
-<li><a href="">Waypoint: Updating Object Properties</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Accessing-Objects-Properties-With-The-Dot-Operator">Waypoint: Accessing Objects Properties with the Dot Operator</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Accessing-Objects-Properties-With-Bracket-Notation">Waypoint: Accessing Objects Properties with Bracket Notation</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Accessing-Objects-Properties-With-Variables">Waypoint: Accessing Objects Properties with Variables</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Updating-Object-Properties">Waypoint: Updating Object Properties</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Add-New-Properties-to-a-JavaScript-Object">Waypoint: Add New Properties to a JavaScript Object</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Delete-Properties-from-a-JavaScript-Object">Waypoint: Delete Properties from a JavaScript Object</a></li>
-<li>Waypoint: Using Objects for Lookups</li>
-<li>Waypoint: Testing Objects for Properties</li>
-<li>Waypoint: Introducing JavaScript Object Notation (JSON)</li>
-<li>Waypoint: Accessing Nested Objects in JSON</li>
-<li>Waypoint: Accessing Nested Arrays in JSON</li>
-<li>Bonfire: Record Collection Incomplete</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Using-Objects-For-Lookups">Waypoint: Using Objects for Lookups</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Testing-Objects-For-Properties">Waypoint: Testing Objects for Properties</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Introducing-Javascript-Object-Notation-Json">Waypoint: Introducing JavaScript Object Notation (JSON)</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Accessing-Nested-Objects-In-JSON">Waypoint: Accessing Nested Objects in JSON</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Accessing-Nested-Arrays-In-JSON">Waypoint: Accessing Nested Arrays in JSON</a></li>
+<li>Checkpoint: Record Collection Incomplete</li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Iterate-with-JavaScript-For-Loops">Waypoint: Iterate with JavaScript For Loops</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Iterate-Odd-Numbers-With-a-For-Loop">Waypoint: Iterate Odd Numbers With a For Loop</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Count-Backwards-With-a-For-Loop">Waypoint: Count Backwards With a For Loop</a></li>
-<li>Waypoint: Iterate Through an Array with a For Loop</li>
-<li>Waypoint: Nesting For Loops</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Iterate-Through-An-Array-With-A-For-Loop">Waypoint: Iterate Through an Array with a For Loop</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Nesting-For-Loops">Waypoint: Nesting For Loops</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Iterate-with-JavaScript-While-Loops">Waypoint: Iterate with JavaScript While Loops</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Generate-Random-Fractions-with-JavaScript">Waypoint: Generate Random Fractions with JavaScript</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Generate-Random-Whole-Numbers-with-JavaScript">Waypoint: Generate Random Whole Numbers with JavaScript</a></li>
@@ -330,12 +330,16 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Invert-Regular-Expression-Matches-with-JavaScript">Waypoint: Invert Regular Expression Matches with JavaScript</a></li>
 </ol>
 
-<p>Deprecated:
-1. <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript">Old One Page Basic JavaScript Waypoints</a>
-1. <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#create-a-javascript-slot-machine">Waypoint: Create a JavaScript Slot Machine</a>
-2. <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#add-your-javascript-slot-machine-slots">Waypoint: Add your JavaScript Slot Machine Slots</a>
-3. <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#bring-your-javascript-slot-machine-to-life">Waypoint: Bring your JavaScript Slot Machine to Life</a>
-4. <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#give-your-javascript-slot-machine-some-stylish-images">Waypoint: Give your JavaScript Slot Machine some stylish images</a></p>
+<h3>
+<a id="deprecated" class="anchor" href="#deprecated" aria-hidden="true"><span class="octicon octicon-link"></span></a>Deprecated:</h3>
+
+<ol>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript">Old One Page Basic JavaScript Waypoints</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#create-a-javascript-slot-machine">Waypoint: Create a JavaScript Slot Machine</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#add-your-javascript-slot-machine-slots">Waypoint: Add your JavaScript Slot Machine Slots</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#bring-your-javascript-slot-machine-to-life">Waypoint: Bring your JavaScript Slot Machine to Life</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#give-your-javascript-slot-machine-some-stylish-images">Waypoint: Give your JavaScript Slot Machine some stylish images</a></li>
+</ol>
 
 <h2>
 <a id="object-oriented-and-functional-programming" class="anchor" href="#object-oriented-and-functional-programming" aria-hidden="true"><span class="octicon octicon-link"></span></a>Object Oriented and Functional Programming</h2>
