Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -242,11 +242,11 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Multiply-Two-Decimals-with-JavaScript">Waypoint: Multiply Two Decimals with JavaScript</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Divide-One-Decimal-by-Another-with-JavaScript">Waypoint: Divide one Decimal by Another with JavaScript</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Finding-a-Remainder-in-Javascript">Waypoint: Finding a Remainder in Javascript</a></li>
-<li>Waypoint: Assignment with Plus Equals</li>
-<li>Waypoint: Assignment with Minus Equals</li>
-<li>Waypoint: Assignment with Times Equals</li>
-<li>Waypoint: Assignment with Divided by Equals</li>
-<li>Checkpoint: Convert Celsius to Fahrenheit</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Assignment-with-Plus-Equals">Waypoint: Assignment with Plus Equals</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Assignment-with-Minus-Equals">Waypoint: Assignment with Minus Equals</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Assignment-with-Times-Equals">Waypoint: Assignment with Times Equals</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Assignment-with-Divided-by-Equals">Waypoint: Assignment with Divided by Equals</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Checkpoint-Convert-Celsius-to-Fahrenheit">Checkpoint: Convert Celsius to Fahrenheit</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#declare-string-variables">Waypoint: Declare String Variables</a></li>
 <li>Waypoint: Escaping Literal Quotes in Strings</li>
 <li>Waypoint: Quoting Strings with Single Quotes</li>
